--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-alpha3'
-
+        classpath 'com.android.tools.build:gradle:2.3.0-beta1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+apply plugin: 'com.jfrog.bintray'
 allprojects {
     repositories {
         jcenter()
