--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,28 @@ buildscript {
 }
 
 apply plugin: 'com.jfrog.bintray'
+
 allprojects {
     repositories {
         jcenter()
+    }
+}
+bintray {
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    configurations = ['archives']
+    pkg {
+        repo = 'generic'
+        name = 'network-graph'
+        userOrg = user
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/Giwi/android-network-graph.git'
+        publicDownloadNumbers = true
+        version {
+            name = '0.0.1'
+            desc = 'Android Network Graph'
+            vcsTag = '0.0.1'
+            attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
+        }
     }
 }
