--- a/network-graph/build.gradle
+++ b/network-graph/build.gradle
@@ -1,4 +1,6 @@
+
 apply plugin: 'com.android.library'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
@@ -17,6 +19,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        disable 'InvalidPackage'
+        abortOnError false
     }
 }
 
