--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(path: ':network-graph')
-   // compile 'giwi:android-network-graph:0.0.1@aar'
+    //compile 'org.giwi:android-network-graph:0.0.1'
 }
